Remove clusterStateListener